# dr-house-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: TTD-INTEGRATION.md  copilot-instructions.md
.github/actions/workspace-version/: action.yml
.github/scripts/: capture-traces.ps1  download-ttd.ps1  verify-ttd.sh
.github/workflows/: build-extension.yml  ci.yml  publish-extension.yml  release-please.yml
crates/dr-house-symbols/: Cargo.toml
crates/dr-house-symbols/src/: lib.rs
crates/dr-house-ttd-decoder/: Cargo.toml  DESIGN-NOTES.md
crates/dr-house-ttd-decoder/src/: lib.rs
crates/morgagni-diagnostics/: Cargo.toml
crates/morgagni-diagnostics/src/: backend.rs  investigator.rs  lib.rs  report.rs
crates/morgagni-diagnostics/src/backend/: json_loader.rs  mock.rs
crates/morgagni-pe/: Cargo.toml
crates/morgagni-pe/src/: lib.rs
crates/morgagni-symbols/: Cargo.toml
crates/morgagni-symbols/src/: lib.rs
crates/morgagni-ttd-decoder/: Cargo.toml  DESIGN-NOTES.md
crates/morgagni-ttd-decoder-sys/: Cargo.toml  build.rs
crates/morgagni-ttd-decoder-sys/cpp/: shim.cpp  shim.h
crates/morgagni-ttd-decoder-sys/examples/: ttd_dump.rs
crates/morgagni-ttd-decoder-sys/src/: lib.rs
crates/morgagni-ttd-decoder/src/: lib.rs  run_trace.rs
examples/double-free-x64/: Cargo.toml
examples/double-free-x64/src/: main.rs
examples/null-deref-x64/: Cargo.toml
examples/null-deref-x64/src/: main.rs
examples/stack-overflow-x64/: Cargo.toml
examples/stack-overflow-x64/src/: main.rs
examples/uninit-read-x64/: Cargo.toml
examples/uninit-read-x64/src/: main.rs
examples/use-after-free-x64/: Cargo.toml
examples/use-after-free-x64/src/: main.rs
extension/resources/ttd-sdk/lib/arm64/: TTDLiveRecorder.lib  TTDReplay.lib
extension/resources/ttd-sdk/lib/x64/: TTDLiveRecorder.lib  TTDReplay.lib
fixtures/: double-free-x64.json  double-free-x64.out  null-deref-x64.json  null-deref-x64.out  stack-overflow-x64.json  stack-overflow-x64.out  uninit-read-x64.json  uninit-read-x64.out  use-after-free-x64.json  use-after-free-x64.out
