# Copyright (c) 2026, Michael Grier

[workspace]
resolver = "2"
members = [
    "crates/morgagni-ttd-decoder",
    "crates/morgagni-ttd-decoder-sys",
    "crates/morgagni-symbols",
    "crates/morgagni-pe",
    "crates/morgagni-diagnostics",
    "examples/null-deref-x64",
    "examples/use-after-free-x64",
    "examples/uninit-read-x64",
    "examples/stack-overflow-x64",
    "examples/double-free-x64",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike Grier"]
license = "MIT"
repository = "https://github.com/MikeGrier/dr-house-rs"
