[package]
name = "dr-house-symbols"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Symbol resolution and symbol management for Dr House (PDB / dbghelp / symbol-server policy). Placeholder implementation."

[dependencies]
thiserror = "1"
