[package]
name = "morgagni-diagnostics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Investigators that consume a TraceBackend and produce structured diagnostic reports for Morgagni."

[dependencies]
morgagni-pe = { path = "../morgagni-pe" }
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder", "fast_fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
