[package]
name = "morgagni-ttd-decoder-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI shim and raw FFI bindings to Microsoft's TTD Replay Engine for Morgagni."
links = "TTDReplay"
build = "build.rs"

[dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"

[[example]]
name = "ttd-dump"
path = "examples/ttd_dump.rs"
